--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/ng-universal": "^3.2.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nguniversal/express-engine": "^9.1.1",
+    "@ngxs/store": "^3.6.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "express": "^4.15.2",
