--- a/backend/configs/apiserver.toml
+++ b/backend/configs/apiserver.toml
@@ -1,3 +1,4 @@
 bind_addr = ":8080"
 log_Level = "debug"
 database_url = "host=localhost dbname=restapi_dev sslmode=disable"
+session_key  = "awegwgwgwg43t15255"
