--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "changeDetection": "OnPush",
         }
       },
       "root": "",
@@ -107,7 +108,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "eslintConfig": ".eslintrc.js",
+            "eslintConfig": ".eslintrc.json",
             "tsConfig": [
               "tsconfig.app.json",
               "tsconfig.spec.json",
