--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --fix",
+    "lint-scss": "stylelint src/**/*.scss",
+    "prettier": "prettier --write src/**/*.{js,ts,scss}",
     "e2e": "ng e2e",
     "dev:ssr": "ng run frontend:serve-ssr",
     "serve:ssr": "node dist/frontend/server/main.js",
@@ -77,6 +79,8 @@
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
