--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,17 +12,6 @@
   },
   "overrides": [
     {
-      "files": ["*.component.ts"],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "ecmaVersion": 2020,
-        "sourceType": "module",
-        "project": "./tsconfig.eslint.json"
-      },
-      "plugins": ["@angular-eslint/template"],
-      "processor": "@angular-eslint/template/extract-inline-html"
-    },
-    {
       "files": ["src/**/*.spec.ts", "src/**/*.d.ts"],
       "parserOptions": { "project": "./tsconfig.eslint.json" },
       "extends": ["plugin:jasmine/recommended"],
@@ -31,8 +20,24 @@
       "rules": { "@typescript-eslint/no-unused-vars": 0 }
     },
     {
+      "files": ["src/**/*.spec.ts", "src/**/*.d.ts"],
+      "parserOptions": {
+        "project": "./src/tsconfig.spec.json"
+      },
+      "extends": ["plugin:jasmine/recommended"],
+      "plugins": ["jasmine"],
+      "env": { "jasmine": true },
+      "rules": {
+        "@typescript-eslint/no-unused-vars": 0
+      }
+    },
+    {
       "files": ["*.ts"],
-      "extends": ["airbnb-typescript/base"],
+      "extends": [
+        "airbnb-typescript/base",
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
+      ],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "ecmaVersion": 2020,
@@ -44,20 +49,13 @@
         "import/prefer-default-export": 0,
         "class-methods-use-this": 0,
         "@typescript-eslint/unbound-method": ["error", { "ignoreStatic": true }],
+        "@typescript-eslint/lines-between-class-members": 0,
         "lines-between-class-members": [
           "error",
           "always",
           { "exceptAfterSingleLine": true }
         ]
       }
-    },
-    {
-      "files": ["*.ts"],
-      "extends": [
-        "airbnb-typescript/base",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
-      ]
     }
   ]
 }
