--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -8,7 +8,7 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "changeDetection": "OnPush",
+          "changeDetection": "OnPush"
         }
       },
       "root": "",
