--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,6 @@
     "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
     "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
     "@angular-eslint/schematics": "0.0.1-alpha.32",
-    "@angular-eslint/template-parser": "0.0.1-alpha.32",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
     "@angular/language-service": "~10.0.4",
@@ -84,5 +83,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+       "eslint --fix"
+    ]
   }
 }
