--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -50,6 +50,24 @@
         "class-methods-use-this": 0,
         "@typescript-eslint/unbound-method": ["error", { "ignoreStatic": true }],
         "@typescript-eslint/lines-between-class-members": 0,
+        "@typescript-eslint/array-type": ["error", { "generic": true }],
+        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/explicit-member-accessibility": ["error"],
+        "@typescript-eslint/explicit-module-boundary-types": ["error"],
+        "@typescript-eslint/member-ordering": ["error"],
+        "@typescript-eslint/no-base-to-string": ["error"],
+        "@typescript-eslint/no-empty-interface": ["error"],
+        "@typescript-eslint/no-explicit-any": ["error"],
+        "@typescript-eslint/no-floating-promises": ["error"],
+        "@typescript-eslint/no-for-in-array": ["error"],
+        "@typescript-eslint/no-implied-eval": ["error"],
+        "@typescript-eslint/no-invalid-void-type": ["error"],
+        "@typescript-eslint/switch-exhaustiveness-check": ["error"],
+        "@typescript-eslint/strict-boolean-expressions": ["error"],
+        "@typescript-eslint/prefer-reduce-type-parameter": ["error"],
+        "@typescript-eslint/prefer-for-of": ["error"],
+        "@typescript-eslint/no-unsafe-member-access": ["error"],
+        "@typescript-eslint/no-unsafe-return": ["error"],
         "lines-between-class-members": [
           "error",
           "always",
