--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -52,7 +52,7 @@
         "@typescript-eslint/lines-between-class-members": 0,
         "@typescript-eslint/array-type": ["error", { "generic": true }],
         "@typescript-eslint/explicit-function-return-type": ["error"],
-        "@typescript-eslint/explicit-member-accessibility": ["error"],
+        "@typescript-eslint/explicit-member-accessibility": ["error", { "ignoredMethodNames": ["constructor"] }],
         "@typescript-eslint/explicit-module-boundary-types": ["error"],
         "@typescript-eslint/member-ordering": ["error"],
         "@typescript-eslint/no-base-to-string": ["error"],
@@ -71,6 +71,12 @@
           "error",
           "always",
           { "exceptAfterSingleLine": true }
+        ],
+        "import/order": [
+          "error",
+          {
+            "newlines-between": "always"
+          }
         ]
       }
     }
