--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
+    "uuidv4": "^6.2.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
