--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -48,6 +48,7 @@
         "import/no-unresolved": 0,
         "import/prefer-default-export": 0,
         "class-methods-use-this": 0,
+        "max-classes-per-file": 0,
         "@typescript-eslint/unbound-method": ["error", { "ignoreStatic": true }],
         "@typescript-eslint/lines-between-class-members": 0,
         "@typescript-eslint/array-type": ["error", { "generic": true }],
@@ -65,7 +66,6 @@
         "@typescript-eslint/strict-boolean-expressions": ["error"],
         "@typescript-eslint/prefer-reduce-type-parameter": ["error"],
         "@typescript-eslint/prefer-for-of": ["error"],
-        "@typescript-eslint/no-unsafe-member-access": ["error"],
         "@typescript-eslint/no-unsafe-return": ["error"],
         "lines-between-class-members": [
           "error",
