--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,7 +9,12 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "alwaysStrict": true
+    "alwaysStrict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"],
+    }
   },
   "files": [],
   "references": [
