--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -78,7 +78,9 @@
             "production": {
               "browserTarget": "frontend:build:production"
             }
-          }
+          },
+          "hmr": true,
+          "open": true
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
