--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nguniversal/express-engine": "^9.1.1",
     "@ngxs/store": "^3.6.2",
+    "chart.js": "^2.9.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.9.1",
     "express": "^4.15.2",
@@ -55,6 +56,7 @@
     "@angular/compiler-cli": "~11.0.4",
     "@angular/language-service": "~11.0.4",
     "@nguniversal/builders": "^9.1.1",
+    "@types/chart.js": "^2.9.29",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
