--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^2.9.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.9.1",
+    "date-fns": "^2.16.1",
     "express": "^4.15.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
