--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,10 +16,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["dom", "es2019"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
