--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -45,7 +45,10 @@
         "@typescript-eslint/lines-between-class-members": 0,
         "@typescript-eslint/array-type": ["error", { "generic": true }],
         "@typescript-eslint/explicit-function-return-type": ["error"],
-        "@typescript-eslint/explicit-member-accessibility": ["error", { "ignoredMethodNames": ["constructor"] }],
+        "@typescript-eslint/explicit-member-accessibility": [
+          "error",
+          { "ignoredMethodNames": ["constructor"] }
+        ],
         "@typescript-eslint/explicit-module-boundary-types": ["error"],
         "@typescript-eslint/member-ordering": ["error"],
         "@typescript-eslint/no-base-to-string": ["error"],
@@ -55,15 +58,17 @@
         "@typescript-eslint/no-implied-eval": ["error"],
         "@typescript-eslint/no-invalid-void-type": ["error"],
         "@typescript-eslint/switch-exhaustiveness-check": ["error"],
-        "@typescript-eslint/strict-boolean-expressions": ["error"],
+        "@typescript-eslint/strict-boolean-expressions": [
+          "error",
+          {
+            "allowNullable": true,
+            "ignoreRhs": true
+          }
+        ],
         "@typescript-eslint/prefer-reduce-type-parameter": ["error"],
         "@typescript-eslint/prefer-for-of": ["error"],
         "@typescript-eslint/no-unsafe-return": ["error"],
-        "lines-between-class-members": [
-          "error",
-          "always",
-          { "exceptAfterSingleLine": true }
-        ],
+        "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
         "import/order": [
           "error",
           {
