--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -41,6 +41,7 @@
         "import/prefer-default-export": 0,
         "class-methods-use-this": 0,
         "max-classes-per-file": 0,
+        "no-param-reassign": 0,
         "@typescript-eslint/unbound-method": ["error", { "ignoreStatic": true }],
         "@typescript-eslint/lines-between-class-members": 0,
         "@typescript-eslint/array-type": ["error", { "generic": true }],
@@ -53,18 +54,12 @@
         "@typescript-eslint/member-ordering": ["error"],
         "@typescript-eslint/no-base-to-string": ["error"],
         "@typescript-eslint/no-empty-interface": ["error"],
-        "@typescript-eslint/no-explicit-any": ["error"],
+        "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-for-in-array": ["error"],
         "@typescript-eslint/no-implied-eval": ["error"],
         "@typescript-eslint/no-invalid-void-type": ["error"],
         "@typescript-eslint/switch-exhaustiveness-check": ["error"],
-        "@typescript-eslint/strict-boolean-expressions": [
-          "error",
-          {
-            "allowNullable": true,
-            "ignoreRhs": true
-          }
-        ],
+        "@typescript-eslint/strict-boolean-expressions": 0,
         "@typescript-eslint/prefer-reduce-type-parameter": ["error"],
         "@typescript-eslint/prefer-for-of": ["error"],
         "@typescript-eslint/no-unsafe-return": ["error"],
