--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "@angular/compiler-cli": "~11.0.4",
     "@angular/language-service": "~11.0.4",
     "@nguniversal/builders": "^9.1.1",
+    "@ngxs/devtools-plugin": "^3.7.1",
     "@types/chart.js": "^2.9.29",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
