--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -4,8 +4,20 @@ server {
   root /usr/share/nginx/html;
   index index.html index.html;
 
-  location /api/v1/accounts {
-    proxy_pass http://backend:8080/api/v1/accounts;
+  location /api/v1/auth {
+    proxy_pass http://backend:8080/api/v1/auth;
+  }
+
+  location /api/v1/accounts/ {
+    proxy_pass http://backend:8080/api/v1/accounts/;
+  }
+
+  location /api/v1/payments/ {
+    proxy_pass http://backend:8080/api/v1/payments/;
+  }
+
+  location /api/v1/categories/ {
+    proxy_pass http://backend:8080/api/v1/categories/;
   }
 
   location / {
