Finisned adding nginx

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -6,18 +6,34 @@ server {
 
   location /api/v1/auth {
     proxy_pass http://backend:8080/api/v1/auth;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 
-  location /api/v1/accounts/ {
-    proxy_pass http://backend:8080/api/v1/accounts/;
+  location /api/v1/accounts {
+    proxy_pass http://backend:8080/api/v1/accounts;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 
-  location /api/v1/payments/ {
-    proxy_pass http://backend:8080/api/v1/payments/;
+  location /api/v1/payments {
+    proxy_pass http://backend:8080/api/v1/payments;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 
-  location /api/v1/categories/ {
-    proxy_pass http://backend:8080/api/v1/categories/;
+  location /api/v1/categories {
+    proxy_pass http://backend:8080/api/v1/categories;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 
   location / {
