--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nguniversal/express-engine": "^9.1.1",
     "@ngxs/store": "^3.6.2",
+    "@swimlane/ngx-charts": "^17.0.0",
     "chart.js": "^2.9.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.9.1",
