--- a/frontend/.stylelintrc.json
+++ b/frontend/.stylelintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-recommended-scss",
+  "plugins": ["stylelint-scss"],
+  "rules": {
+    "unit-whitelist": ["rem", "%", "vh", "vw"]
+  }
 }
