--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -20,8 +20,8 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
 
-  location /api/v1/payments {
-    proxy_pass http://backend:8080/api/v1/payments;
+  location /api/v1/transactions {
+    proxy_pass http://backend:8080/api/v1/transactions;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
