--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint --fix",
-    "lint-scss": "stylelint src/**/*.scss",
-    "prettier": "prettier --write src/**/*.{js,ts,scss}",
+    "lint-scss": "stylelint src/app/**/*.scss --fix",
+    "prettier": "prettier --write src/**/*.{html,ts,scss}",
     "e2e": "ng e2e",
     "dev:ssr": "ng run frontend:serve-ssr",
     "serve:ssr": "node dist/frontend/server/main.js",
@@ -47,7 +47,8 @@
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "uuidv4": "^6.2.3",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@ngxs/devtools-plugin": "^3.7.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
@@ -55,11 +56,11 @@
     "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
     "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
     "@angular-eslint/schematics": "0.0.1-alpha.32",
+    "@angular-eslint/template-parser": "0.0.1-alpha.32",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
     "@angular/language-service": "~11.0.4",
     "@nguniversal/builders": "^9.1.1",
-    "@ngxs/devtools-plugin": "^3.7.1",
     "@types/chart.js": "^2.9.29",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
@@ -74,6 +75,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jasmine": "^4.1.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-protractor": "^2.1.1",
     "husky": "^4.2.5",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -86,7 +88,10 @@
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
     "stylelint": "^13.6.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-sass-guidelines": "^7.1.0",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.5"
