--- a/frontend/tsconfig.eslint.json
+++ b/frontend/tsconfig.eslint.json
@@ -1,10 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "src/**/*.ts",
-    ".eslintrc.json",
-    "tests/**/*.ts",
-    "jest.config.js",
-  ],
-  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts", ".eslintrc.js", "tests/**/*.ts", "jest.config.js"],
+  "exclude": ["node_modules"]
 }
