--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,81 +19,81 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.4",
-    "@angular/cdk": "^10.1.1",
-    "@angular/common": "~11.0.4",
-    "@angular/compiler": "~11.0.4",
-    "@angular/core": "~11.0.4",
-    "@angular/forms": "~11.0.4",
-    "@angular/material": "^10.1.1",
-    "@angular/platform-browser": "~11.0.4",
-    "@angular/platform-browser-dynamic": "~11.0.4",
-    "@angular/platform-server": "~11.0.4",
-    "@angular/router": "~11.0.4",
-    "@angular/service-worker": "~11.0.4",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/ng-universal": "^3.2.0",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nguniversal/express-engine": "^9.1.1",
-    "@ngxs/store": "^3.6.2",
-    "@swimlane/ngx-charts": "^17.0.0",
-    "chart.js": "^2.9.4",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.9.1",
-    "date-fns": "^2.16.1",
-    "express": "^4.15.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "uuidv4": "^6.2.3",
-    "zone.js": "~0.10.2",
-    "@ngxs/devtools-plugin": "^3.7.1"
+    "@angular/animations": "11.1.0",
+    "@angular/cdk": "10.1.1",
+    "@angular/common": "11.1.0",
+    "@angular/compiler": "11.1.0",
+    "@angular/core": "11.1.0",
+    "@angular/forms": "11.1.0",
+    "@angular/material": "10.1.1",
+    "@angular/platform-browser": "11.1.0",
+    "@angular/platform-browser-dynamic": "11.1.0",
+    "@angular/platform-server": "11.1.0",
+    "@angular/router": "11.1.0",
+    "@angular/service-worker": "11.1.0",
+    "@nestjs/common": "6.0.0",
+    "@nestjs/core": "6.0.0",
+    "@nestjs/ng-universal": "3.2.0",
+    "@nestjs/platform-express": "6.0.0",
+    "@nguniversal/express-engine": "9.1.1",
+    "@ngxs/devtools-plugin": "3.7.1",
+    "@ngxs/store": "3.6.2",
+    "@swimlane/ngx-charts": "17.0.0",
+    "chart.js": "2.9.4",
+    "class-transformer": "0.3.1",
+    "class-validator": "0.9.1",
+    "date-fns": "2.16.1",
+    "express": "4.15.2",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "6.5.4",
+    "tslib": "2.0.0",
+    "uuidv4": "6.2.3",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular-devkit/build-angular": "0.1100.4",
     "@angular-eslint/builder": "0.0.1-alpha.32",
     "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
     "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
     "@angular-eslint/schematics": "0.0.1-alpha.32",
     "@angular-eslint/template-parser": "0.0.1-alpha.32",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
-    "@angular/language-service": "~11.0.4",
-    "@nguniversal/builders": "^9.1.1",
-    "@types/chart.js": "^2.9.29",
-    "@types/express": "^4.17.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "^11.1.1",
+    "@angular/compiler-cli": "11.1.0",
+    "@angular/language-service": "11.1.0",
+    "@nguniversal/builders": "9.1.1",
+    "@types/chart.js": "2.9.29",
+    "@types/express": "4.17.0",
+    "@types/jasmine": "3.6.0",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
-    "codelyzer": "^6.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jasmine": "^4.1.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-protractor": "^2.1.1",
-    "husky": "^4.2.5",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "protractor": "~7.0.0",
-    "stylelint": "^13.6.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-scss": "^3.18.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "codelyzer": "6.0.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-typescript": "9.0.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jasmine": "4.1.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-protractor": "2.1.1",
+    "husky": "4.2.5",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "5.1.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "lint-staged": "10.2.11",
+    "prettier": "2.0.5",
+    "protractor": "7.0.0",
+    "stylelint": "13.6.1",
+    "stylelint-config-recommended-scss": "4.2.0",
+    "stylelint-config-sass-guidelines": "7.1.0",
+    "stylelint-config-standard": "20.0.0",
+    "stylelint-scss": "3.18.0",
+    "ts-node": "8.3.0",
+    "tslint": "6.1.0",
+    "typescript": "4.0.5"
   }
 }
