--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "ng test",
     "lint": "ng lint --fix",
     "lint-scss": "stylelint src/app/**/*.scss --fix",
     "prettier": "prettier --write src/**/*.{html,ts,scss}",
@@ -15,7 +14,9 @@
     "build:ssr": "ng build --prod && ng run frontend:server:production",
     "prerender": "ng run frontend:prerender",
     "prebuild:ssr": "ngcc",
-    "build:stats": "ng build --stats-json"
+    "build:stats": "ng build --stats-json",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -66,6 +67,7 @@
     "@types/express": "4.17.0",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
+    "@types/jest": "^26.0.20",
     "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
@@ -80,11 +82,8 @@
     "husky": "4.2.5",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
-    "karma": "5.1.1",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "3.0.2",
-    "karma-jasmine": "4.0.0",
-    "karma-jasmine-html-reporter": "1.5.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.3.2",
     "lint-staged": "10.2.11",
     "prettier": "2.0.5",
     "protractor": "7.0.0",
@@ -96,5 +95,18 @@
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
     "typescript": "4.0.5"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setup-jest.ts"
+    ],
+    "moduleNameMapper": {
+      "@shared/(.*)": "<rootDir>/src/app/shared/$1",
+      "@shared-modules/(.*)": "<rootDir>/src/app/shared-modules/$1",
+      "@core/(.*)": "<rootDir>/src/app/core/$1",
+      "@environments/(.*)": "<rootDir>/src/environments/$1",
+      "@rootStore/(.*)": "<rootDir>/src/app/store/$1"
+    }
   }
 }
