--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "prebuild:ssr": "ngcc",
     "build:stats": "ng build --stats-json",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -61,6 +63,7 @@
     "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "11.1.0",
     "@angular/language-service": "11.1.0",
+    "@cypress/webpack-preprocessor": "^5.5.0",
     "@nguniversal/builders": "9.1.1",
     "@types/chart.js": "2.9.29",
     "@types/express": "4.17.0",
@@ -71,6 +74,7 @@
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
     "codelyzer": "6.0.0",
+    "cypress": "^6.4.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-typescript": "9.0.0",
     "eslint-config-prettier": "6.11.0",
