--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14.15.4-alpine3.10 as build
 WORKDIR /usr/src/app
 COPY package.json ./
-RUN npm install
+RUN npm install --production
 COPY . .
 RUN npm run build
 
