--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -36,6 +36,14 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
 
+    location /api/v1/currencies {
+    proxy_pass http://backend:8080/api/v1/currencies;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
   location / {
     try_files $uri $uri/ /index.html;
   }
