--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run frontend:serve-ssr",
     "serve:ssr": "node dist/frontend/server/main.js",
-    "build:ssr": "ng build --prod && ng run frontend:server:production",
+    "build:ssr": "ng build && ng run frontend:server",
     "prerender": "ng run frontend:prerender",
     "prebuild:ssr": "ngcc",
     "build:stats": "ng build --stats-json",
@@ -23,25 +23,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.1.0",
-    "@angular/cdk": "11.1.0",
-    "@angular/common": "11.1.0",
-    "@angular/compiler": "11.1.0",
-    "@angular/core": "11.1.0",
-    "@angular/forms": "11.1.0",
-    "@angular/material": "11.1.0",
-    "@angular/platform-browser": "11.1.0",
-    "@angular/platform-browser-dynamic": "11.1.0",
-    "@angular/platform-server": "11.1.0",
-    "@angular/router": "11.1.0",
-    "@nestjs/common": "6.0.0",
-    "@nestjs/core": "6.0.0",
-    "@nestjs/ng-universal": "3.2.0",
-    "@nestjs/platform-express": "6.0.0",
-    "@nguniversal/express-engine": "9.1.1",
-    "@ngxs/devtools-plugin": "3.7.1",
-    "@ngxs/router-plugin": "3.7.1",
-    "@ngxs/store": "3.6.2",
+    "@angular/animations": "12.2.15",
+    "@angular/cdk": "12.2.13",
+    "@angular/common": "12.2.15",
+    "@angular/compiler": "12.2.15",
+    "@angular/core": "12.2.15",
+    "@angular/forms": "12.2.15",
+    "@angular/material": "12.2.13",
+    "@angular/platform-browser": "12.2.15",
+    "@angular/platform-browser-dynamic": "12.2.15",
+    "@angular/platform-server": "12.2.15",
+    "@angular/router": "12.2.15",
+    "@nguniversal/express-engine": "12.1.3",
+    "@ngxs/devtools-plugin": "3.7.2",
+    "@ngxs/router-plugin": "^3.7.2",
+    "@ngxs/store": "3.7.2",
     "@swimlane/ngx-charts": "17.0.0",
     "chart.js": "2.9.4",
     "class-transformer": "0.3.1",
@@ -49,21 +45,22 @@
     "date-fns": "2.16.1",
     "express": "4.15.2",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.5.4",
+    "rxjs": "6.5.5",
     "tslib": "2.0.0",
     "uuidv4": "6.2.3",
-    "zone.js": "0.10.2"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.4",
-    "@angular-eslint/builder": "0.0.1-alpha.32",
-    "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
-    "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
-    "@angular-eslint/schematics": "0.0.1-alpha.32",
-    "@angular-eslint/template-parser": "0.0.1-alpha.32",
-    "@angular/cli": "^11.1.1",
-    "@angular/compiler-cli": "11.1.0",
-    "@angular/language-service": "11.1.0",
+    "@angular-devkit/build-angular": "^12.2.15",
+    "@angular-devkit/schematics": "^12.2.15",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
+    "@angular/cli": "12.2.15",
+    "@angular/compiler-cli": "12.2.15",
+    "@angular/language-service": "12.2.15",
     "@cypress/webpack-preprocessor": "^5.5.0",
     "@nguniversal/builders": "9.1.1",
     "@types/chart.js": "2.9.29",
@@ -72,8 +69,8 @@
     "@types/jasminewd2": "2.0.3",
     "@types/jest": "^26.0.20",
     "@types/node": "12.11.1",
-    "@typescript-eslint/eslint-plugin": "2.31.0",
-    "@typescript-eslint/parser": "2.31.0",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
     "codelyzer": "6.0.0",
     "cypress": "^6.4.0",
     "eslint": "6.8.0",
@@ -91,14 +88,14 @@
     "lint-staged": "10.2.11",
     "prettier": "2.0.5",
     "protractor": "7.0.0",
-    "stylelint": "13.6.1",
-    "stylelint-config-recommended-scss": "4.2.0",
-    "stylelint-config-sass-guidelines": "7.1.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylelint-scss": "3.18.0",
+    "stylelint": "14.2.0",
+    "stylelint-config-recommended-scss": "5.0.2",
+    "stylelint-config-sass-guidelines": "9.0.1",
+    "stylelint-config-standard": "24.0.0",
+    "stylelint-scss": "4.1.0",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
-    "typescript": "4.0.5"
+    "typescript": "4.3.5"
   },
   "jest": {
     "preset": "jest-preset-angular",
