--- a/frontend/tsconfig.server.json
+++ b/frontend/tsconfig.server.json
@@ -7,7 +7,11 @@
     "experimentalDecorators": true
   ,    "target": "es2016"
 },
-  "files": ["src/main.server.ts", "server.ts"],
+  "files": [
+    "src/main.server.ts",
+    "server.ts",
+    "server.ts"
+  ],
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
   }
