--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ jwt.secret = proselyte
 jwt.expiration = 604800
 server.port = 8080
 allowed-origins.api = *
+spring.flyway.baseline-on-migrate = true
